updates to the rush page

--- a/mobile.html
+++ b/mobile.html
@@ -21,11 +21,6 @@
     <script src="js/jquery.color.js"></script>
 
     <script>
-        /**
-         * Created by vshivakumar on 12/9/15.
-         */
-
-
         $(document).ready(function(){
             $("#slideshow > div:gt(0)").hide();
 
@@ -58,11 +53,15 @@
 <div id="header"></div>
 
 <!-- Welcome Letter-->
-<div class="inlineBlock opensans centerDiv vertAlignTop centerText posRel bordRad5 shadow" style="background-color: #464646; top: 50px; font-size: 20px;margin-bottom: 50px;width: 500px; color: white;padding: 0 8px 0 8px;z-index: 11;">
-    <div class="" style=" font-family: Amaranth; font-size: 36px; margin: 25px 0 25px 0;">Welcome to Sigma Phi Delta!</div>
-    <p>We are a <strong>professional</strong> and <strong>social</strong> engineering fraternity made up of the most excellent male engineers at
-        Stony Brook University. Our fraternity is dedicated to guiding its members towards professional and <strong>academic
-            success</strong> while enriching the college experience for engineering students.</p>
+<div class="posRel inlineBlock opensans centerDiv vertAlignTop centerText bordRad5 shadow colWhite" style="background-color: #464646; top: 50px; font-size: 20px;margin-bottom: 50px; width: 550px;height: 300px;z-index: 11;">
+    <img src='images/symbols/spdpic.jpg' class="height100 width100" style="opacity: 0.3;"/>
+
+    <div class="posAbs height100 top0" style="width:90%;margin: 0 5%;">
+        <div class="" style="font-family: Amaranth; font-size: 36px; margin: 25px 0 25px 0;">Welcome to Sigma Phi Delta!</div>
+        <p>We are a <strong>professional</strong> and <strong>social</strong> engineering fraternity made up of the most excellent male engineers at
+            Stony Brook University. Our fraternity is dedicated to guiding its members towards professional and <strong>academic
+                success</strong> while enriching the college experience for engineering students.</p>
+    </div>
 </div>
 
 <!-- Content -->
@@ -82,13 +81,17 @@
 </div>
 
 <!-- Interested in Rushing?-->
-<div class="inlineBlock opensans centerDiv vertAlignTop centerText posRel bordRad5 shadow" style="background-color: #464646; top: 50px; font-size: 20px;margin-bottom: 50px; width: 500px; color: white;padding: 0 8px 0 8px;z-index: 11;">
-    <div class="" style=" font-family: Amaranth; font-size: 36px; margin: 25px 0 25px 0;">Interested in joining?</div>
-    <p>The academic, professional, and networking opportunities are boundless as a member of Sigma Phi Delta.
-        Learn in detail about these opportunities and how to join Sigma Phi Delta at our RUSH page.</p>
-    <a href="rush.html" style="text-decoration: none;">
-        <div id="rushBtn" class="vertAlignTop centerText" style="height: 6%;">SPRING RUSH 2016</div>
-    </a>
+<div class="posRel inlineBlock opensans centerDiv vertAlignTop centerText bordRad5 shadow colWhite" style="background-color: #464646; top: 50px; font-size: 20px;margin-bottom: 50px; width: 550px;height: 300px;z-index: 11;">
+    <img src='https://pbs.twimg.com/profile_images/2620742352/banner1.jpg' class="height100 width100" style="opacity: 0.6;"/>
+
+    <div class="posAbs height100 top0" style="width:90%;margin: 0 5%;">
+        <div class="" style="font-family: Amaranth; font-size: 36px; margin: 25px 0 25px 0;">Interested in joining?</div>
+        <p>The academic, professional, and networking opportunities are boundless as a member of Sigma Phi Delta.
+            Learn in detail about these opportunities and how to join Sigma Phi Delta at our RUSH page.</p>
+        <a href="rush.html" style="text-decoration: none;">
+            <div id="rushBtn" class="vertAlignTop centerText" style="height: 7%;">SPRING RUSH 2016</div>
+        </a>
+    </div>
 </div>
 
 <!-- Footer Space -->
