--- a/rush.html
+++ b/rush.html
@@ -35,6 +35,11 @@
                 border: 1px solid red;
             }
         }
+        .circShadow{
+            -webkit-box-shadow: 0px 10px 20px 0px rgba(0,0,0,0.75);
+            -moz-box-shadow: 0px 10px 20px 0px rgba(0,0,0,0.75);
+            box-shadow: 0px 10px 20px 0px rgba(0,0,0,0.75);
+        }
     </style>
 
 </head>
@@ -65,8 +70,8 @@
 
     <!-- Academic Benefits -->
     <div style="margin: 55px 0 0 0;display:flex;justify-content:center;align-items:center;">
-        <div class="centerText vertAlignTop colWhite inlineBlock" style="height: 300px; width: 300px;">
-            <div class="colWhite bordRad50 height100 width100" style=" background-color: #F7302F;display:flex;justify-content:center;align-items:center;">
+        <div class="centerText vertAlignTop colWhite inlineBlock " style="height: 300px; width: 300px;">
+            <div class="colWhite bordRad50 height100 width100 circShadow" style=" background-color: #F7302F;display:flex;justify-content:center;align-items:center;">
                 <div>
                     <img src="icons/academics.png" height="150px" width="150px" class="block centerDiv"/>
                     <div class="" style="font-family: Amaranth; font-size: 26px;height: 50px;padding-top: 5px;">Academic Benefits</div>
@@ -101,7 +106,7 @@
             job market, who you know is just as important as what you know.-->
         </div>
         <div class="centerText vertAlignTop colWhite inlineBlock" style="height: 300px; width: 300px;">
-            <div class="colWhite bordRad50 height100 width100" style=" background-color: #F7302F;display:flex;justify-content:center;align-items:center;">
+            <div class="colWhite bordRad50 height100 width100 circShadow" style=" background-color: #F7302F;display:flex;justify-content:center;align-items:center;">
                 <div>
                     <img src="icons/professional5.png" height="150px" width="150px" class="block centerDiv"/>
                     <div class="" style="font-family: Amaranth; font-size: 26px;height: 50px;padding-top: 5px;">Professional Benefits</div>
@@ -114,7 +119,7 @@
     <!-- Social Benefits -->
     <div style="margin: 55px 0 0 0;display:flex;justify-content:center;align-items:center;">
         <div class="centerText vertAlignTop colWhite inlineBlock" style="height: 300px; width: 300px;">
-            <div class="colWhite bordRad50 height100 width100" style=" background-color: #F7302F;display:flex;justify-content:center;align-items:center;">
+            <div class="colWhite bordRad50 height100 width100 circShadow" style=" background-color: #F7302F;display:flex;justify-content:center;align-items:center;">
                 <div>
                     <img src="icons/crowd.png" height="150px" width="150px" class="block centerDiv"/>
                     <div class="" style="font-family: Amaranth; font-size: 26px;height: 50px;padding-top: 5px;">Social Benefits</div>
@@ -140,7 +145,7 @@
             Being a member of Sigma Phi Delta not only alters a man's college experience, but also positively affects the rest of their life.
         </div>
         <div class="centerText vertAlignTop colWhite inlineBlock" style="height: 300px; width: 300px;">
-            <div class="colWhite bordRad50 height100 width100" style=" background-color: #F7302F;display:flex;justify-content:center;align-items:center;">
+            <div class="colWhite bordRad50 height100 width100 circShadow" style=" background-color: #F7302F;display:flex;justify-content:center;align-items:center;">
                 <div>
                     <img src="images/symbols/spdgearlogo.png" height="175px" width="150px" class="block centerDiv"/>
                     <div class="" style="font-family: Amaranth; font-size: 26px;height: 50px;padding-top: 5px;">Brotherhood</div>
