--- a/mobile.html
+++ b/mobile.html
@@ -89,7 +89,7 @@
         <p>The academic, professional, and networking opportunities are boundless as a member of Sigma Phi Delta.
             Learn in detail about these opportunities and how to join Sigma Phi Delta at our RUSH page.</p>
         <a href="rush.html" style="text-decoration: none;">
-            <div id="rushBtn" class="vertAlignTop centerText" style="height: 7%;font-size: 28gpx;">SPRING RUSH 2016</div>
+            <div id="rushBtn" class="vertAlignTop centerText" style="height: 7%;font-size: 28px;">SPRING RUSH 2016</div>
         </a>
     </div>
 </div>
