Index page font sizes styled

--- a/index.html
+++ b/index.html
@@ -41,11 +41,20 @@
 
         }
         @media all and (max-width:1600px) {
+            /*body{
+                border: 1px solid green;
+            }*/
             #ssCont{
                 width: 240%;
                 height: 298px;
                 left: -95%;
             }
+        }
+
+        @media all and (max-width:900px) {
+            /*body{
+                border: 1px solid red;
+            }*/
         }
 
         .scalingFontSize{
@@ -156,8 +165,8 @@
             <div class="imgCont"><img src="images/pictures/ss-spd2.jpg" /></div>
             <!-- Welcome Letter-->
             <div class="inlineBlock opensans centerDiv vertAlignTop centerText posAbs colWhite fonSize20 height100 width100  scalingFontSize" style="left: 98%;padding: 0 12px;z-index: 11;">
-                <div class="" style=" font-family: Amaranth; font-size: 2.25em; margin: 25px 0 25px 0;">Welcome to Sigma Phi Delta!</div>
-                <div style="font-size: 1.25em;padding: 0 15px;">We are a <strong>professional</strong> and <strong>social</strong> engineering fraternity made up of the most excellent male engineers at
+                <div class="" style=" font-family: Amaranth; font-size: 2em; margin: 25px 0 25px 0;">Welcome to Sigma Phi Delta!</div>
+                <div style="font-size: 1.25em;width: 90%;margin: 0 auto;">We are a <strong>professional</strong> and <strong>social</strong> engineering fraternity made up of the most excellent male engineers at
                     Stony Brook University. Our fraternity is dedicated to guiding its members towards professional and <strong>academic
                         success</strong> while enriching the college experience for engineering students.
                 </div>
@@ -190,12 +199,12 @@
             <!-- Interested in Rushing?-->
             <div class="opensans centerDiv vertAlignTop centerText posAbs height100 width100 colWhite scalingFontSize" style="left: 98%; padding: 0 12px;z-index: 11;">
                 <div class="" style="color: white; font-family: Amaranth; font-size: 2.25em; margin: 25px 0 25px 0;">Interested in joining?</div>
-                <div style="font-size: 1.25em;padding: 0 10px;">The academic, professional, and networking opportunities are boundless as a member of Sigma Phi Delta.
+                <div class="" style="font-size: 1.25em;width: 90%;margin: 0 auto;">The academic, professional, and networking opportunities are boundless as a member of Sigma Phi Delta.
                     Learn in detail about these opportunities and how to join Sigma Phi Delta at our RUSH page.
                 </div>
 
                 <a href="rush.html" class="textDecNone">
-                    <div id="rushBtn" class="vertAlignTop centerText" style="">SPRING RUSH 2016</div>
+                    <div id="rushBtn" class="vertAlignTop centerText inlineBlock" style="">SPRING RUSH 2016</div>
                 </a>
             </div>
             <div class="blackOverlay" style=""></div>
