Members animations added

--- a/members.html
+++ b/members.html
@@ -233,7 +233,7 @@
 <!-- Content -->
 
 
-<div class="posRel" style="margin: 35px auto 25px auto; text-align: center; min-height: 530px; width: 875px;">
+<div id="membersContainer" class="posRel" style="margin: 35px auto 25px auto; text-align: center; min-height: 530px;">
 
     <div id="load">
         <img src="images/symbols/loading.gif" height="200px" width="200px"/>
@@ -307,4 +307,12 @@ is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Crea
     });
     */
 </script>
+<style>
+    @media all and (min-width:300px) {  #membersContainer{  width: 300px;  }  }
+    @media all and (min-width:600px) {  #membersContainer{  width: 590px;  }  }
+    @media all and (min-width:900px) {  #membersContainer{  width: 880px;  }  }
+    @media all and (min-width:1200px) {  #membersContainer{  width: 1170px;  }  }
+    @media all and (min-width:1500px) {  #membersContainer{  width: 1460px;  }  }
+    @media all and (min-width:1800px) {  #membersContainer{  width: 1750px;  }  }x
+</style>
 
