--- a/members.html
+++ b/members.html
@@ -308,11 +308,11 @@ is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Crea
     */
 </script>
 <style>
-    @media all and (min-width:300px) {  #membersContainer{  width: 300px;  }  }
-    @media all and (min-width:600px) {  #membersContainer{  width: 590px;  }  }
-    @media all and (min-width:900px) {  #membersContainer{  width: 880px;  }  }
-    @media all and (min-width:1200px) {  #membersContainer{  width: 1170px;  }  }
-    @media all and (min-width:1500px) {  #membersContainer{  width: 1460px;  }  }
-    @media all and (min-width:1800px) {  #membersContainer{  width: 1750px;  }  }x
+    @media all and (min-width:300px) {  #membersContainer{  width: 300px;  }   #load{left:-5%;} }
+    @media all and (min-width:600px) {  #membersContainer{  width: 590px;  }   #load{left: -3%;}  }
+    @media all and (min-width:900px) {  #membersContainer{  width: 880px;  }   #load{left: 4%;}  }
+    @media all and (min-width:1200px) {  #membersContainer{  width: 1170px;  } #load{left: 13%;}   }
+    @media all and (min-width:1500px) {  #membersContainer{  width: 1460px;  } #load{left: 19%;}  }
+    @media all and (min-width:1800px) {  #membersContainer{  width: 1750px;  } #load{left: 25%;}  }x
 </style>
 
