Had to add pictures into project to display them on the site. Refractoring the code

--- a/alumni.html
+++ b/alumni.html
@@ -39,7 +39,7 @@
                 <img src="http://static5.businessinsider.com/image/52b86ce46bb3f7032e3faf9e-500-375/doge-1.jpg" height="250px" width="250px" class=""/>
             </div>
 
-            <div class="vertAlignTop opensans" style="text-align: left; padding: 8px;">
+            <div class="vertAlignTop roboto" style="text-align: left; padding: 8px;">
                 <div>
                     <span style="font-weight: bold;">Hometown:</span>
                     <span>Plainview, NY</span>
