--- a/events.html
+++ b/events.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/html">
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Sigma Phi Delta</title>
+    <title>Sigma Phi Delta at Stony Brook at Stony Brook</title>
     <link rel="shortcut icon" href="images/symbols/spdlogo.jpg">
 
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
@@ -30,7 +30,7 @@
 <div id="header"></div>
 
 <!-- Content -->
-<div class="posRel opensans" style="font-size: 20px; min-width: 900px; margin: 30px auto 25px auto; min-height: 500px; max-width: 70%;">
+<div class="posRel roboto" style="font-size: 20px; min-width: 900px; margin: 30px auto 25px auto; min-height: 700px; height: 100%;max-width: 70%;">
 
     <!-- Upcoming Event Boxes -->
     <div id="grid"   class="posRel" style="min-height: 900px;">
@@ -71,8 +71,6 @@
             <a href="images/fliers/fall2015/resumereview.jpg"><img class="small" src="images/fliers/fall2015/resumereview.jpg" width="100%" style=""></a>
             <img class="enlarge" src="images/fliers/fall2015/resumereview.jpg" width="200%" style="">
         </div>
-
-
 
     </div>
 
