--- a/rush.html
+++ b/rush.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/html">
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Sigma Phi Delta</title>
+    <title>Sigma Phi Delta at Stony Brook at Stony Brook</title>
     <link rel="shortcut icon" href="images/symbols/spdlogo.jpg">
 
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
@@ -29,7 +29,7 @@
 
 
 <!-- Content -->
-<div class="posRel opensans" style="font-size: 20px; min-width: 900px; margin: 20px auto 25px auto; text-align: left; min-height: 500px; width: 60%;">
+<div class="posRel roboto" style="font-size: 20px; min-width: 900px; margin: 20px auto 25px auto; text-align: left; min-height: 500px; width: 60%;">
 
     <!-- Title -->
     <div class="inlineBlock" style="color: #F7302F; font-family: Amaranth; font-size: 36px; margin: 20px 0 15px 0;">Why rush Sigma Phi Delta?</div>
@@ -37,7 +37,7 @@
     <!-- List of Rush Events -->
     <div id="rushflier" class="shadow inlineBlock floatRight vertAlignTop" style="margin-top:30px; width: 500px; height: 300px; margin-left: 25px; text-align: left; padding: 0; border: 5px solid #191919;">
         <!-- Rush Flier -->
-        <img src="images/symbols/spdrush2016n.png" height="100%" width="100%"/>
+        <img src="" height="100%" width="100%"/>
     </div>
 
     <div style="margin-bottom: 95px;line-height: 26px;font-size: 1em;">
@@ -75,8 +75,8 @@
             As a member of <strong>PGC (Professional Greek Council)</strong> we have access to unique opportunities to help build up a strong
             professional side in any student especially through events we've previously hosted such as 'Ask an Engineer',
             STEM panels, resume reviews, and mock interviews with alumni. Many of our members have received internships while
-            still in school for companies such as <strong>J.P. Morgan, Citi, Cognizant, UTC, DealerTrack, and Goldman Sachs.</strong> Graduating
-            members have went on to work full-time positions for companies such as <strong>Intel, Deusche Bank, Cummins, Johnson & Johnson</strong>,
+            still in school for companies such as <strong>J.P. Morgan, Citi, IBM, Cognizant, UTC, DealerTrack, and Goldman Sachs.</strong> Graduating
+            members have went on to work full-time positions for companies such as <strong>Deutsche Bank, Intel, Cummins, Johnson & Johnson, Motorolla Solutions, IBM</strong>,
             and many more.
 
             <!-- Insert part about encouraged to view alumni testimonies, stop before it is common."
