--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/html">
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Sigma Phi Delta</title>
+    <title>Sigma Phi Delta at Stony Brook</title>
     <link rel="shortcut icon" href="images/symbols/spdlogo.jpg">
 
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
@@ -23,7 +23,7 @@
 
 </head>
 
-<body id="pagetwo" class="posRel" style="width: 100%; height: 100%; overflow-x: hidden; background-color: #E3E3E3; margin:0; padding:0;" data-role="page">
+<body id="pagetwo" class="posRel height100 width110 marg0 pad0" style="overflow-x: hidden; background-color: #E3E3E3;" data-role="page">
 <!-- Header -->
 <div id="header"></div>
 
@@ -32,7 +32,7 @@
 
 
     <!-- Welcome Letter -->
-    <div class="inlineBlock opensans centerDiv vertAlignTop" style="font-size: 20px; min-width: 480px; max-width: 900px; color: black; text-align: left;">
+    <div class="inlineBlock roboto centerDiv vertAlignTop" style="font-size: 20px; min-width: 480px; max-width: 900px; color: black; text-align: left;">
 
         <!-- Title -->
         <div class="" style="color: #F7302F; font-family: Amaranth; font-size: 36px;">About Sigma Phi Delta</div>
