--- a/header.html
+++ b/header.html
@@ -3,16 +3,15 @@
     <div style="width: 960px; margin: 0 auto;">
         <!-- SIGMA PHI DELTA -->
         <a href="index.html" class="textDecNone"><div class="posRel" style="font-size: 100px; color: #F7302F; text-align: center; font-family: Adam; padding: 25px 0; top: 15px;">
-            <span style="padding: 0 5px;"><!--<span style="font-size: 101px;">&Sigma;</span>-->SIGMA</span>
-            <span style="padding: 0 5px;">PHI<!--<span style="font-size: 101px;">&Phi;</span>--></span>
-            <span style="padding: 0 5px;"><!--<span style="font-size: 101px;">&Delta;</span>-->DELTA</span>
+            <span style="padding: 0 5px;">SIGMA</span>
+            <span style="padding: 0 5px;">PHI</span>
+            <span style="padding: 0 5px;">DELTA</span>
         </div></a>
 
         <!-- Subtitle -->
         <div class="posRel" style="font-size: 26px; color:#F7302F; text-align: center; font-family: Adam;">
             Beta - Eta Chapter
             &middot;
-            <!--<div class="inlineBlock posRel" style="height: 2px; background-color: #F7302F; width: 75px; vertical-align: middle; bottom: 2px;"></div>-->
             SUNY
             &middot;
             Stony Brook University
