--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <div class="imgCont"><img src="images/pictures/ss-spd1.jpg" /></div>
             <div class="imgCont"><img src="images/pictures/ss-spd2.jpg" /></div>
             <!-- Welcome Letter-->
-            <div class="inlineBlock opensans centerDiv vertAlignTop centerText posAbs colWhite fonSize20 height100 width100  scalingFontSize" style="left: 98%;padding: 0 12px;z-index: 11;">
+            <div class="inlineBlock roboto centerDiv vertAlignTop centerText posAbs colWhite fonSize20 height100 width100  scalingFontSize" style="left: 98%;padding: 0 12px;z-index: 11;">
                 <div class="" style=" font-family: Amaranth; font-size: 2em; margin: 25px 0 25px 0;">Welcome to Sigma Phi Delta!</div>
                 <div style="font-size: 1.25em;width: 90%;margin: 0 auto;">We are a <strong>professional</strong> and <strong>social</strong> engineering fraternity made up of the most excellent male engineers at
                     Stony Brook University. Our fraternity is dedicated to guiding its members towards professional and <strong>academic
@@ -197,7 +197,7 @@
             <div class="imgCont"><img src="images/pictures/ss-spd6.jpg" /></div>
             <div class="imgCont"><img src="images/pictures/ss-spd7.jpg" /></div>
             <!-- Interested in Rushing?-->
-            <div class="opensans centerDiv vertAlignTop centerText posAbs height100 width100 colWhite scalingFontSize" style="left: 98%; padding: 0 12px;z-index: 11;">
+            <div class="roboto centerDiv vertAlignTop centerText posAbs height100 width100 colWhite scalingFontSize" style="left: 98%; padding: 0 12px;z-index: 11;">
                 <div class="" style="color: white; font-family: Amaranth; font-size: 2.25em; margin: 25px 0 25px 0;">Interested in joining?</div>
                 <div class="" style="font-size: 1.25em;width: 90%;margin: 0 auto;">The academic, professional, and networking opportunities are boundless as a member of Sigma Phi Delta.
                     Learn in detail about these opportunities and how to join Sigma Phi Delta at our RUSH page.
