--- a/mobile.html
+++ b/mobile.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/html">
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Sigma Phi Delta</title>
+    <title>Sigma Phi Delta at Stony Brook</title>
     <link rel="shortcut icon" href="images/symbols/spdlogo.jpg">
 
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
@@ -53,7 +53,7 @@
 <div id="header"></div>
 
 <!-- Welcome Letter-->
-<div class="posRel inlineBlock opensans centerDiv vertAlignTop centerText bordRad5 shadow colWhite" style="background-color: #464646; top: 50px; font-size: 20px;margin-bottom: 50px; width: 550px;height: 300px;z-index: 11;">
+<div class="posRel inlineBlock roboto centerDiv vertAlignTop centerText bordRad5 shadow colWhite" style="background-color: #464646; top: 50px; font-size: 20px;margin-bottom: 50px; width: 550px;height: 300px;z-index: 11;">
     <img src='images/symbols/spdpic.jpg' class="height100 width100" style="opacity: 0.3;"/>
 
     <div class="posAbs height100 top0" style="width:90%;margin: 0 5%;">
@@ -81,7 +81,7 @@
 </div>
 
 <!-- Interested in Rushing?-->
-<div class="posRel inlineBlock opensans centerDiv vertAlignTop centerText bordRad5 shadow colWhite" style="background-color: #464646; top: 50px; font-size: 20px;margin-bottom: 50px; width: 550px;height: 300px;z-index: 11;">
+<div class="posRel inlineBlock roboto centerDiv vertAlignTop centerText bordRad5 shadow colWhite" style="background-color: #464646; top: 50px; font-size: 20px;margin-bottom: 50px; width: 550px;height: 300px;z-index: 11;">
     <img src='https://pbs.twimg.com/profile_images/2620742352/banner1.jpg' class="height100 width100" style="opacity: 0.6;"/>
 
     <div class="posAbs height100 top0" style="width:90%;margin: 0 5%;">
