Added picture of Dan. Added simpler hover styling for grid-items on members page. Changed shadow. Shadow may need to be changed again

--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
 
 </head>
 
-<body id="pagetwo" class="posRel height100 width110 marg0 pad0 backColWhite" style="overflow-x: hidden;" data-role="page">
+<body id="pagetwo" class="posRel height100 width110 marg0 pad0 backColBackGround" style="overflow-x: hidden;" data-role="page">
 <!-- Header -->
 <div id="header"></div>
 
