--- a/rush.html
+++ b/rush.html
@@ -37,7 +37,7 @@
     <!-- List of Rush Events -->
     <div id="rushflier" class="shadow inlineBlock floatRight vertAlignTop" style="margin-top:30px; width: 500px; height: 300px; margin-left: 25px; text-align: left; padding: 0; border: 5px solid #191919;">
         <!-- Rush Flier -->
-        <img src="" height="100%" width="100%"/>
+        <img src="images/fliers/spring2016/rush.png" height="100%" width="100%"/>
     </div>
 
     <div style="margin-bottom: 95px;line-height: 26px;font-size: 1em;">
