--- a/rush.html
+++ b/rush.html
@@ -177,8 +177,8 @@ is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Crea
         }
     }
     .circShadow{
-        -webkit-box-shadow: 0px 10px 20px 0px rgba(0,0,0,0.75);
-        -moz-box-shadow: 0px 10px 20px 0px rgba(0,0,0,0.75);
-        box-shadow: 0px 10px 20px 0px rgba(0,0,0,0.75);
+        -webkit-box-shadow: 0 10px 10px 0 #464646;
+        -moz-box-shadow: 0 10px 10px 0 #464646;
+        box-shadow: 0 10px 10px 0 #464646;
     }
 </style>
