--- a/about.html
+++ b/about.html
@@ -167,28 +167,6 @@
 </div>
 
 <!-- Footer -->
-<div id="footer"></div>
-
-<!--
-<div>
-Icons made by<a href="http://www.freepik.com" title="Freepik">Freepik</a>
-from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>
-is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a>
-</div>
- -->
+<div id="footer" class="posAbs"></div>
 </body>
 </html>
-<script>
-    $(document).ready(function(){
-        $('#header').load("header.html");
-        $('#footer').load("footer.html");
-    });
-</script>
-
-<script>
-    $(document).on('page:load', function() {
-        $('#header').load("header.html");
-        $('#footer').load("footer.html");
-    });
-</script>
-
