Index page documented completely

--- a/header.html
+++ b/header.html
@@ -40,7 +40,7 @@
         var file = window.location.href.substring(srt, end);
         //alert(file);
 
-        if (file == "org/index" || file == "index"){
+        if (file == "org/index" || file == "index" || file == "org/mobile" || file == "mobile"){
             $('#nvb-index').addClass('selnavbaritem');
         }
         if (file == "org/about" || file == "about"){
