--- a/index.html
+++ b/index.html
@@ -2,11 +2,19 @@
 <html xmlns="http://www.w3.org/1999/html">
 <head lang="en">
     <meta charset="UTF-8">
+    <!-- Title for the tab in browser -->
     <title>Sigma Phi Delta</title>
+
+    <!-- Logo for the tab in browser -->
     <link rel="shortcut icon" href="images/symbols/spdlogo.jpg">
 
+    <!-- Jquery Plugin -->
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+
+    <!-- Load in the javascript file -->
     <script language="javascript" type="text/javascript" src="js/index.js"></script>
+
+    <!-- Load in the CSS file -->
     <link rel="stylesheet" type="text/css" href="css/index.css">
 
     <!-- Fonts -->
@@ -21,22 +29,26 @@
     <!-- Color Animations -->
     <script src="js/jquery.color.js"></script>
 
+    <!-- Checks if the screen is mobile/tablet and redirects user to another mobile friendly view -->
     <script type="text/javascript">
         if (screen.width <= 899) {
             document.location = "mobile.html";
         }
     </script>
+    <!-- If the screen is an iphone, redirect to mobile friendly view -->
     <script language=javascript>
         if ((navigator.userAgent.match(/iPhone/i)) || (navigator.userAgent.match(/iPod/i))) {
             location.replace("http://beta-eta.sigmaphidelta.org/mobile.html");
         }
     </script>
+    <!-- Media Queries to properly resize the slideshow and the slideshow styling -->
     <style>
         @media all and (max-width:2000px) {
             #ssCont{
                 width: 200%;
                 height: 398px;
                 left: -70%;
+
             }
 
         }
@@ -50,13 +62,18 @@
                 left: -99.5%;
             }
         }
-
         @media all and (max-width:900px) {
             /*body{
                 border: 1px solid red;
             }*/
         }
-
+        #ssCont{
+            text-align: left;
+            margin: 100px auto 50px;
+            -webkit-box-shadow: 0 0 20px rgba(0,0,0,0.4);
+            -moz-box-shadow: 0 0 20px rgba(0,0,0,0.4);
+            box-shadow: 0 0 20px rgba(0,0,0,0.4);
+        }
         .scalingFontSize{
             font-size: 1vw;
         }
@@ -88,7 +105,6 @@
             height: 112.5%; width: 112%;
             bottom: 6.25%; position: relative;
         }
-
         #slideshow4{
             left: 1.60%;
         }
@@ -119,16 +135,14 @@
 </head>
 
 <body id="pageone" class="posRel width100 height100 overflowXHidden marg0 pad0 backColBackGround">
+
 <!-- Header -->
 <div id="header"></div>
 
 <!-- Content -->
-<div class="posRel width100 centerText overflowHidden width100" style="width: 100%; min-height: 453px;">
+<div class="posRel width100 centerText overflowHidden width100" style="min-height: 453px;">
 
-
-
-    <div id="ssCont" class="posRel" style="text-align: left; margin: 100px auto 50px;
-    -webkit-box-shadow: 0 0 20px rgba(0,0,0,0.4);-moz-box-shadow: 0 0 20px rgba(0,0,0,0.4);box-shadow: 0 0 20px rgba(0,0,0,0.4);">
+    <div id="ssCont" class="posRel" style="">
         <div id="slideshowBorder" style=""></div>
 
         <!-- Slideshow - Preferred Aspect Ratio is 4:3 for images -->
