Finished documentation for the about page and other stlying

--- a/about.html
+++ b/about.html
@@ -2,11 +2,19 @@
 <html xmlns="http://www.w3.org/1999/html">
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Sigma Phi Delta at Stony Brook</title>
+    <!-- Title for the tab in browser -->
+    <title>Sigma Phi Delta</title>
+
+    <!-- Logo for the tab in browser -->
     <link rel="shortcut icon" href="images/symbols/spdlogo.jpg">
 
+    <!-- Jquery Plugin -->
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+
+    <!-- Load in the javascript file -->
     <script language="javascript" type="text/javascript" src="js/index.js"></script>
+
+    <!-- Load in the CSS file -->
     <link rel="stylesheet" type="text/css" href="css/index.css">
 
     <!-- Fonts -->
@@ -23,19 +31,19 @@
 
 </head>
 
-<body id="pagetwo" class="posRel height100 width110 marg0 pad0 backColBackGround" style="overflow-x: hidden;" data-role="page">
+<body id="pagetwo" class="posRel height100 width110 marg0 pad0 backColBackGround overflowXHidden" data-role="page">
 <!-- Header -->
 <div id="header"></div>
 
 <!-- Content -->
-<div class="posRel" style="min-width: 960px; margin: 50px auto 25px auto; text-align: center; min-height: 500px;">
+<div class="posRel centerText" style="min-width: 960px; margin: 50px auto 25px auto; min-height: 500px;">
 
 
     <!-- Welcome Letter -->
-    <div class="inlineBlock roboto centerDiv vertAlignTop" style="font-size: 20px; min-width: 480px; max-width: 900px; color: black; text-align: left;">
+    <div class="inlineBlock roboto centerDiv vertAlignTop fontSize20 colBlack leftText" style="min-width: 480px; max-width: 900px;">
 
         <!-- Title -->
-        <div class="" style="color: #F7302F; font-family: Amaranth; font-size: 36px;">About Sigma Phi Delta</div>
+        <div class="colRed amaranth fontSize36">About Sigma Phi Delta</div>
 
         <!-- Content -->
 
@@ -48,7 +56,7 @@
             <p>We stand steadfast and firm in our belief that we serve as a necessary adjunct to our Colleges and Universities
                 in the training of young engineers. Our Constitution states, without equivocation, that
 
-                <span style="color: #c52625;">the Object of the Sigma Phi Delta Fraternity shall be to promote the advancement of the Engineering Profession;
+                <span class="colDarkRed">the Object of the Sigma Phi Delta Fraternity shall be to promote the advancement of the Engineering Profession;
                 to foster the advancement of Engineering Education;to instill a greater spirit of cooperation among Engineering
                 Students and Organizations; to inculcate in its members the highest ideals of virtuous manhood, good Citizenship,
                 obedience to Law, and Brotherhood; and to encourage excellence in scholarship.</span>
@@ -60,7 +68,7 @@
         <div class="centerText" style="margin:30px auto 50px auto;">
             <div class="insignia inlineBlock shadow backColWhite" style="width: 460px; padding: 15px 55px 25px 55px; height: 200px; border-radius: 50px;">
                 <img src="images/symbols/spdlogo.jpg" />
-                <div class="posRel" style="color: #637A6A; top: 35px;">Sigma Phi Delta Logo</div>
+                <div class="posRel colDarkRed" style="top: 25px;">Sigma Phi Delta Logo</div>
             </div>
         </div>
 
@@ -88,25 +96,25 @@
             <!-- SPD Flower -->
             <div class="posRel shadow inlineBlock backColWhite floatLeft" style="width: 200px; height: 150px;  border-radius: 25px;">
                 <img src="images/symbols/spdflower.jpg" style="top: 15px;" class="posRel"/>
-                <div class="posAbs centerText width100" style="color: #637A6A; bottom: -35px;"><span>Flower</span></div>
+                <div class="posAbs centerText width100 colDarkRed" style="bottom: -35px;"><span>Flower</span></div>
             </div>
 
             <!-- SPD Flag -->
             <div class="posRel inlineBlock" style="">
                 <img src="images/symbols/spdflag.gif" width="320px" style="" class="shadow"/>
-                <div class="posAbs centerText width100" style="color: #637A6A; bottom: -35px;"><span>Flag</span></div>
+                <div class="posAbs centerText width100 colDarkRed" style="bottom: -35px;"><span>Flag</span></div>
             </div>
 
             <!-- SPD Symbol -->
             <div class="posRel shadow inlineBlock backColWhite floatRight centerText" style="width: 200px; height: 150px; border-radius: 25px;">
                 <img src="images/symbols/castle.jpg" width="100px" style="top: 10px;" class="posRel"/>
-                <div class="posAbs centerText width100" style="color: #637A6A; bottom: -35px;"><span>Symbol</span></div>
+                <div class="posAbs centerText width100 colDarkRed" style="bottom: -35px;"><span>Symbol</span></div>
             </div>
         </div>
 
         <!-- Code of Ethics -->
         <div>
-            <div class="" style="color: #F7302F; font-family: Amaranth; font-size: 28px;">The Code of Ethics of the Sigma Phi Delta Fraternity</div>
+            <div class="colRed amaranth fontSize28">The Code of Ethics of the Sigma Phi Delta Fraternity</div>
 
             <p>"The Code of Ethics of Sigma Phi Delta is founded upon the basic principles of truth and honesty. The quotation
                 'Whatsoever things are true, whatsoever things are honest' should be the light guiding the footsteps of Engineering
@@ -128,13 +136,13 @@
         <div class="centerText" style="margin:30px auto 50px auto;">
             <div class="insignia inlineBlock shadow backColWhite" style="width: 400px; padding: 15px 55px 25px 55px; height: 400px; border-radius: 50px;">
                 <img src="images/symbols/spdcoatofarms.jpg" height="100%" width="100%"/>
-                <div class="posRel" style="color: #637A6A; top: 35px;">Crest</div>
+                <div class="posRel colDarkRed" style="top: 35px;">Crest</div>
             </div>
         </div>
 
         <!-- Preamble -->
         <div>
-            <div class="" style="color: #F7302F; font-family: Amaranth; font-size: 28px;">Preamble of the Constitution</div>
+            <div class="colRed amaranth fontSize28" style="">Preamble of the Constitution</div>
 
             <p>In order to advance the interests of the Engineering Profession and to create a greater spirit of cooperation and
                 Brotherhood among the students, faculty and alumni of the various colleges and universities of the world, we do
@@ -146,12 +154,12 @@
             <!-- SPD Members Badge -->
             <div class="posRel shadow inlineBlock backColWhite floatLeft" style="width: 200px; height: 150px;  border-radius: 25px;">
                 <img src="images/symbols/spdmembbadge.jpg" style="top: 15px;" class="posRel"/>
-                <div class="posAbs centerText width100" style="color: #637A6A; bottom: -35px;"><span>Membership Badge</span></div>
+                <div class="posAbs centerText width100 colDarkRed" style="bottom: -35px;"><span>Membership Badge</span></div>
             </div>
 
             <!-- SPD Flag -->
             <div class="posRel inlineBlock centerText" style="">
-                <div class="" style="color: #F7302F; font-family: Amaranth; font-size: 28px;">Motto</div>
+                <div class="colRed amaranth fontSize28">Motto</div>
                 <div>"Pro Bono Professionis"</div>
                 <div>For the good of the profession.</div>
             </div>
@@ -159,7 +167,7 @@
             <!-- SPD Pledge Pin -->
             <div class="posRel shadow inlineBlock backColWhite floatRight centerText" style="width: 200px; height: 150px; border-radius: 25px;">
                 <img src="images/symbols/spdpledgepin.jpg" width="150px" style="top: 10px;" class="posRel"/>
-                <div class="posAbs centerText width100" style="color: #637A6A; bottom: -35px;"><span>Pledge Pin</span></div>
+                <div class="posAbs centerText width100 colDarkRed" style=" bottom: -35px;"><span>Pledge Pin</span></div>
             </div>
         </div>
     </div>
