--- a/events.html
+++ b/events.html
@@ -2,11 +2,19 @@
 <html xmlns="http://www.w3.org/1999/html">
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Sigma Phi Delta at Stony Brook at Stony Brook</title>
+    <!-- Title for the tab in browser -->
+    <title>Sigma Phi Delta</title>
+
+    <!-- Logo for the tab in browser -->
     <link rel="shortcut icon" href="images/symbols/spdlogo.jpg">
 
+    <!-- Jquery Plugin -->
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+
+    <!-- Load in the javascript file -->
     <script language="javascript" type="text/javascript" src="js/index.js"></script>
+
+    <!-- Load in the CSS file -->
     <link rel="stylesheet" type="text/css" href="css/index.css">
 
     <!-- Fonts -->
@@ -20,9 +28,6 @@
 
     <!-- Color Animations -->
     <script src="js/jquery.color.js"></script>
-
-    <!-- Masonry -->
-    <script src="js/masonry.pkgd.min.js"></script>
 </head>
 
 <body class="posRel" style="width: 100%; height: 100%; overflow-x: hidden; background-color: #E3E3E3; margin:0; padding:0;">
