--- a/header.html
+++ b/header.html
@@ -2,14 +2,16 @@
 <div class="posRel shadowBottom" style="padding: 0 0 25px 0; background-color: #191919;">
     <div style="width: 960px; margin: 0 auto;">
         <!-- SIGMA PHI DELTA -->
-        <a href="index.html" class="textDecNone"><div class="posRel" style="font-size: 100px; color: #F7302F; text-align: center; font-family: Adam; padding: 25px 0; top: 15px;">
+        <a href="index.html" class="textDecNone">
+            <div class="posRel adam centerText colRed" style="font-size: 100px; color: #F7302F;padding: 25px 0; top: 15px;">
             <span style="padding: 0 5px;">SIGMA</span>
             <span style="padding: 0 5px;">PHI</span>
             <span style="padding: 0 5px;">DELTA</span>
-        </div></a>
+        </div>
+        </a>
 
         <!-- Subtitle -->
-        <div class="posRel" style="font-size: 26px; color:#F7302F; text-align: center; font-family: Adam;">
+        <div class="posRel adam centerText" style="font-size: 26px; color:#F7302F; text-align: center; ">
             Beta - Eta Chapter
             &middot;
             SUNY
