--- a/rush.html
+++ b/rush.html
@@ -23,29 +23,33 @@
 
 </head>
 
-<body class="posRel" style="width: 100%; height: 100%; overflow-x: hidden; background-color: #E3E3E3; margin:0; padding:0;">
+<body class="posRel width100 height100 overflowXHidden backColBackGround marg0 pad0">
 <!-- Header -->
 <div id="header"></div>
 
 
 <!-- Content -->
-<div class="posRel roboto" style="font-size: 20px; min-width: 900px; margin: 20px auto 25px auto; text-align: left; min-height: 500px; width: 60%;">
+<div class="posRel roboto fontSize20 " style=" min-width: 900px; margin: 20px auto 25px auto; text-align: left; min-height: 500px; width: 60%;">
 
-    <!-- Title -->
-    <div class="inlineBlock" style="color: #F7302F; font-family: Amaranth; font-size: 36px; margin: 20px 0 15px 0;">Why rush Sigma Phi Delta?</div>
+    <!-- Introduction -->
+    <div>
+        <!-- Title -->
+        <div class="inlineBlock amaranth colRed fontSize36" style="margin: 20px 0 15px 0;">Why rush Sigma Phi Delta?</div>
 
-    <!-- List of Rush Events -->
-    <div id="rushflier" class="shadow inlineBlock floatRight vertAlignTop" style="margin-top:30px; width: 500px; height: 300px; margin-left: 25px; text-align: left; padding: 0; border: 5px solid #191919;">
-        <!-- Rush Flier -->
-        <img src="images/fliers/spring2016/rush.png" height="100%" width="100%"/>
-    </div>
+        <!-- List of Rush Events -->
+        <div id="rushflier" class="shadow inlineBlock floatRight vertAlignTop pad0" style="margin-top:30px; width: 500px; height: 300px; margin-left: 25px; text-align: left;border: 5px solid #191919;">
+            <!-- Rush Flier -->
+            <img src="images/fliers/spring2016/rush.png" height="100%" width="100%"/>
+        </div>
 
-    <div style="margin-bottom: 95px;line-height: 26px;font-size: 1em;">
-        As the Premier International Fraternity of Engineers, Sigma Phi Delta and its members boast a strong embrace in the
+        <!-- Introduction Paragraph -->
+        <div class="fontSize16" style="margin-bottom: 95px;line-height: 26px;">
+            As the Premier International Fraternity of Engineers, Sigma Phi Delta and its members boast a strong embrace in the
             <strong>"work hard, play hard"</strong> mentality. With that said, the Beta-Eta Chapter at Stony Brook University proves itself to be
             both a social and professional organization. Rush is an excellent opportunity in which anyone interested in
             learning more, or joining our Organization can come out and do so in a manner that gives proper insight on what we do
             , and what we stand for.
+        </div>
     </div>
 
     <!-- Academic Benefits -->
